# waargonaut

./: .ghci  .gitignore  .travis.yml  BENCHMARKS.txt  ChangeLog.md  Purdy.hs  README.md  Setup.hs  cabal.project  changelog.md  default.nix  foo.json  shell.nix  waarg-hackage-overrides.nix  waarg-overrides.nix  waargonaut-deps.nix  waargonaut.cabal  waargonaut.nix
.github/workflows/: haskell-ci.yml
benchmarks/: Allocations.hs  Bench.hs  ConvenientFlatSurface.hs  criterion  weigh
ci/: ci.nix  jobsets.json  jobsets.nix
docs/: Waargonaut-Decode-Error.html  Waargonaut-Decode-Internal.html  Waargonaut-Decode-Traversal.html  Waargonaut-Decode-Types.html  Waargonaut-Decode-ZipperMove.html  Waargonaut-Decode.html  Waargonaut-Encode.html  Waargonaut-Generic.html  Waargonaut-Types-CommaSep.html  Waargonaut-Types-JArray.html  Waargonaut-Types-JChar.html  Waargonaut-Types-JNumber.html  Waargonaut-Types-JObject.html  Waargonaut-Types-JString.html  Waargonaut-Types-Json.html  Waargonaut-Types-Whitespace.html  Waargonaut-Types.html  Waargonaut.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  (+6 more)
nix/: addpkg.sh  digit.json  digit.nix  fetch-overrides.nix  generic-lens.json  generic-lens.nix  hedgehog-fn.json  hedgehog-fn.nix  hedgehog.json  hedgehog.nix  hoist-error.json  hoist-error.nix  hw-bits.json  hw-bits.nix  hw-json-simd.json  hw-json-simd.nix  hw-json.json  hw-json.nix  hw-mquery.json  hw-mquery.nix  hw-prim.json  hw-prim.nix  hw-rankselect.json  hw-rankselect.nix  hw-simd.json  hw-simd.nix  lens.json  lens.nix  nixpkgs.json  sources.json  tasty-hedgehog.json  tasty-hedgehog.nix  tasty-hunit.nix  tasty.json  tasty.nix  update.sh  waargoverlay.nix
nix/patches/: remove-testing-library-component.patch
src/: WaargDraft.hs  Waargonaut.hs
src/Waargonaut/: Attoparsec.hs  Decode.hs  Encode.hs  Generic.hs  Lens.hs  Prettier.hs  Test.hs  Types.hs  Zipper.hs
src/Waargonaut/Decode/: DecodeResult.hs  Error.hs  Internal.hs  Runners.hs  Succinct.hs  Traversal.hs  Types.hs  ZipperMove.hs
src/Waargonaut/Decode/Succinct/: Types.hs
src/Waargonaut/Encode/: Builder.hs  Types.hs
src/Waargonaut/Encode/Builder/: CommaSep.hs  JArray.hs  JChar.hs  JNumber.hs  JObject.hs  JString.hs  Types.hs  Whitespace.hs
src/Waargonaut/Types/: CommaSep.hs  JArray.hs  JAssoc.hs  JChar.hs  JNumber.hs  JObject.hs  JString.hs  Json.hs  LeadingTrailing.hs  Whitespace.hs
src/Waargonaut/Types/CommaSep/: Elem.hs  Elems.hs
src/Waargonaut/Types/JChar/: Escaped.hs  HexDigit4.hs  Unescaped.hs
src/Waargonaut/Types/JObject/: JAssoc.hs
test/: Bench.hs  Decoder.hs  Decoder.lhs  Doctests.hs  Encoder.hs  Generics.hs  Golden.hs  Json.hs  Laws.hs  Main.hs  Properties.hs  Utils.hs  test7.json
test/Decoder/: Laws.hs  Parsers.hs
test/Encoder/: Issue69.hs  Laws.hs
test/Prettier/: NestedObjs.hs  pretty_nested_objs.json
test/Types/: CommaSep.hs  Common.hs  JChar.hs  JNumber.hs  JString.hs  Json.hs  JsonDraft.hs  LeadingTrailing.hs  Whitespace.hs
test/json-data/: backslash128.json  keys-in-obj.json  mishandling.json  test1.json  unicode_2705.json
test/json-data/bad-json/: no_comma_arr.json  no_comma_obj.json
test/json-data/goldens/: nested_arrs.json.golden
waargbench/: CHANGELOG.md  LICENCE  cabal.project  default.nix  shell.nix  waargbench.cabal  waargbench.nix
waargbench/bench/: Bench.hs
waargbench/src/: Common.hs  Waargbench.hs
