cabal-version:      3.0
name:               waargonaut
version:            0.8.0.2
synopsis:           JSON wrangling
description:
  Flexible, precise, and efficient JSON decoding/encoding library.

license:            BSD-3-Clause
license-file:       LICENSE
author:             HASKELL-WAARGONAUT @ Data61
maintainer:
  oᴉ˙ldɟb@uɐǝs, emilypi@cohomolo.gy, george@wils.online, tonymorris+github@gmail.com

copyright:
  Copyright (C) 2018-2021 Commonwealth Scientific and Industrial Research Organisation (CSIRO)

category:           Parser, Web, JSON
build-type:         Simple
extra-doc-files:
  changelog.md
  README.md

-- Misc json files
-- Known bad json files
-- Golden files
extra-source-files:
  test/json-data/bad-json/no_comma_arr.json
  test/json-data/bad-json/no_comma_obj.json
  test/json-data/goldens/backslash128.json.golden
  test/json-data/goldens/empty_arr_empty_ws.json.golden
  test/json-data/goldens/image_obj.json.golden
  test/json-data/goldens/location_array.json.golden
  test/json-data/goldens/nested_arrs.json.golden
  test/json-data/goldens/null_arr_trailing_comma_ws.json.golden
  test/json-data/goldens/numbers.json.golden
  test/json-data/goldens/twitter100.json.golden
  test/json-data/goldens/twitter_with_hex_vals.json.golden
  test/json-data/goldens/unicode_2705.json.golden
  test/json-data/image_obj.json
  test/json-data/keys-in-obj.json
  test/json-data/numbers.json
  test/json-data/twitter_with_hex_vals.json
  test/json-data/unicode_2705.json

homepage:           https://github.com/haskell-waargonaut/waargonaut
bug-reports:        https://github.com/haskell-waargonaut/waargonaut/issues
tested-with:
  GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.1


source-repository head
  type:     git
  location: git@github.com/haskell-waargonaut/waargonaut.git

library
  -- Modules included in this executable, other than Main.
  exposed-modules:
    Waargonaut
    Waargonaut.Attoparsec
    Waargonaut.Decode
    Waargonaut.Decode.Error
    Waargonaut.Decode.Internal
    Waargonaut.Decode.Runners
    Waargonaut.Decode.Traversal
    Waargonaut.Decode.Types
    Waargonaut.Decode.ZipperMove
    Waargonaut.Encode
    Waargonaut.Encode.Builder
    Waargonaut.Encode.Builder.CommaSep
    Waargonaut.Encode.Builder.JArray
    Waargonaut.Encode.Builder.JChar
    Waargonaut.Encode.Builder.JNumber
    Waargonaut.Encode.Builder.JObject
    Waargonaut.Encode.Builder.JString
    Waargonaut.Encode.Builder.Types
    Waargonaut.Encode.Builder.Whitespace
    Waargonaut.Encode.Types
    Waargonaut.Generic
    Waargonaut.Lens
    Waargonaut.Prettier
    Waargonaut.Test
    Waargonaut.Types
    Waargonaut.Types.CommaSep
    Waargonaut.Types.CommaSep.Elem
    Waargonaut.Types.CommaSep.Elems
    Waargonaut.Types.JArray
    Waargonaut.Types.JChar
    Waargonaut.Types.JChar.Escaped
    Waargonaut.Types.JChar.HexDigit4
    Waargonaut.Types.JChar.Unescaped
    Waargonaut.Types.JNumber
    Waargonaut.Types.JObject
    Waargonaut.Types.JObject.JAssoc
    Waargonaut.Types.Json
    Waargonaut.Types.JString
    Waargonaut.Types.Whitespace

  ghc-options:      -Wall

  -- Other library packages from which modules are imported.
  build-depends:
      attoparsec               >=0.13    && <0.15
    , base                     >=4.11    && <5
    , bifunctors               >=5       && <5.6
    , bytestring               >=0.10.6  && <0.12
    , containers               >=0.5.6   && <0.7
    , contravariant            >=1.4     && <1.6
    , digit                    >=0.7     && <1
    , distributive             >=0.5     && <0.7
    , errors                   >=2.2     && <2.4
    , generics-sop             >=0.4     && <0.6
    , hoist-error              >=0.2     && <0.3
    , hw-balancedparens        >=0.2     && <0.5
    , hw-bits                  >=0.7     && <0.8
    , hw-json-standard-cursor  >=0.2.1.1 && <0.3
    , hw-prim                  >=0.6     && <0.7
    , hw-rankselect            >=0.13    && <0.14
    , lens                     >=4.15    && <5.2
    , mmorph                   >=1.1     && <1.3
    , mtl                      >=2.2.2   && <2.3
    , nats                     >=1       && <1.2
    , natural                  >=0.3     && <0.4
    , parsers                  >=0.12    && <0.13
    , records-sop              >=0.1     && <0.2
    , scientific               >=0.3     && <0.4
    , semigroupoids            >=5.2.2   && <5.4
    , semigroups               >=0.8.4   && <0.20
    , tagged                   >=0.8.5   && <0.9
    , text                     >=1.2     && <1.3
    , transformers             >=0.4     && <0.7
    , unordered-containers     >=0.2.9   && <0.3
    , vector                   >=0.12    && <0.13
    , witherable               >=0.2     && <0.5
    , wl-pprint-annotated      >=0.1     && <0.2
    , zippers                  >=0.2     && <0.4

  -- Directories containing source files.
  hs-source-dirs:   src

  -- Base language which the package is written in.
  default-language: Haskell2010

test-suite waarg-tests
  other-modules:
    Decoder
    Decoder.Laws
    Encoder
    Encoder.Laws
    Generics
    Golden
    Json
    Laws
    Prettier.NestedObjs
    Properties
    Types.CommaSep
    Types.Common
    Types.JChar
    Types.JNumber
    Types.Json
    Types.JString
    Types.Whitespace
    Utils

  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
      attoparsec               >=0.13    && <0.15
    , base                     >=4.11     && <5
    , bytestring               >=0.10.6  && <0.12
    , containers               >=0.5.6   && <0.7
    , contravariant            >=1.4     && <1.6
    , digit                    >=0.7     && <1
    , distributive             >=0.5     && <0.7
    , filepath                 >=1.4     && <1.5
    , generics-sop             >=0.4     && <0.6
    , hedgehog                 >=0.6     && <1.2
    , hedgehog-fn              >=0.6     && <2
    , hw-balancedparens        >=0.2     && <0.5
    , hw-bits                  >=0.7     && <0.8
    , hw-json-standard-cursor  >=0.2.1.1 && <0.3
    , hw-prim                  >=0.6     && <0.7
    , hw-rankselect            >=0.13    && <0.14
    , lens                     >=4.15    && <5.2
    , mtl                      >=2.2.2   && <2.3
    , natural                  >=0.3     && <0.4
    , scientific               >=0.3     && <0.4
    , semigroupoids            >=5.2.2   && <5.6
    , semigroups               >=0.8.4   && <0.20
    , tagged                   >=0.8.5   && <0.9
    , tasty                    >=0.11    && <1.5
    , tasty-expected-failure   >=0.11    && <0.13
    , tasty-golden             >=2.3     && <2.4
    , tasty-hedgehog           >=0.2     && <1.2
    , tasty-hunit              >=0.10    && <0.11
    , text                     >=1.2     && <1.3
    , unordered-containers     >=0.2.9   && <0.3
    , vector                   >=0.12    && <0.13
    , waargonaut
    , zippers                  >=0.2     && <0.4

  ghc-options:      -Wall

  -- Constraint on the version of Cabal needed to build this package.
  default-language: Haskell2010
